# madNES

./: .cpu.cpp.kate-swp  .gitignore  .ppu.cpp.kate-swp  .things.txt.kate-swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cpu.cpp  difflog.txt  nes  nes_main.cpp  palette.pal  ppu.cpp  read.cpp  read.h  things.txt
ROMs/: README.txt
include/: cpu.hpp  disassembler.hpp  game_loop.hpp  graphics.hpp  input.hpp  main.hpp  mappers.hpp  parse_args.hpp  parse_rom.hpp  ppu.hpp
src/: .graphics.cpp.kate-swp  .main.cpp.kate-swp  a.out  cpu.cpp  cpu.hpp  disassembler.cpp  game_loop.cpp  graphics.cpp  input.cpp  main.cpp  mappers.cpp  nes  nes_main.cpp  parse_args.cpp  parse_rom.cpp  ppu.cpp
